--- a/templates/pricing.html
+++ b/templates/pricing.html
@@ -30,8 +30,8 @@
                     <li class="flex gap-x-3"><span class="text-concrete-900 font-bold">✓</span> Standard Integrations
                         (Sage 300, Procore)</li>
                 </ul>
-                <a href="/#contact" aria-describedby="tier-developer"
-                    class="mt-8 block w-full bg-concrete-100 py-3 px-3 text-center text-sm font-bold text-concrete-900 hover:bg-concrete-200 border border-concrete-300">Start
+                <a href="https://cal.com/arunthiru/skool-test" target="_blank" aria-describedby="tier-developer"
+                    class="mt-8 block w-full bg-concrete-100 py-3 px-3 text-center text-sm font-bold text-concrete-900 hover:bg-concrete-200 border border-concrete-300 uppercase">Start
                     Trial</a>
             </div>
 
@@ -55,8 +55,8 @@
                     <li class="flex gap-x-3"><span class="text-white font-bold">✓</span> Dedicated Solutions Architect
                     </li>
                 </ul>
-                <a href="/#contact" aria-describedby="tier-enterprise"
-                    class="mt-8 block w-full bg-white py-3 px-3 text-center text-sm font-bold text-concrete-900 hover:bg-concrete-100">Schedule
+                <a href="https://cal.com/arunthiru/skool-test" target="_blank" aria-describedby="tier-enterprise"
+                    class="mt-8 block w-full bg-white py-3 px-3 text-center text-sm font-bold text-concrete-900 hover:bg-concrete-100 uppercase">Schedule
                     Consult</a>
             </div>
 
